--- a/index.html
+++ b/index.html
@@ -2,14 +2,15 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Odin Recipes</title>
+        <title>Quang's Recipes</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
 
     <body>
         <h1>Odin Recipes</h1>
         <ul>
-            <li><a href="recipes/BanhGio/banhgio.html">Banh Gio Recipe</a></li>
-            <li><a href="recipes/BanhFlan/banhflan.html">Banh Flan Recipe</a></li>
+            <li><a href="recipes/BanhGio/banhgio.html"><button>Banh Gio Recipe</button></a></li>
+            <li><a href="recipes/BanhFlan/banhflan.html"><button>Banh Flan Recipe</button></a></li>
         </ul>
     </body>
 </html>
