--- a/recipes/BanhFlan/banhflan.html
+++ b/recipes/BanhFlan/banhflan.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Banh Flan Recipe</title>
+        <link rel="stylesheet" href="style.css">
     </head>
 
     <body>
